--- a/src/View/ModalCarro.form
+++ b/src/View/ModalCarro.form
@@ -317,9 +317,12 @@
     <Component class="javax.swing.JFormattedTextField" name="jTextFieldValorDiaria">
       <Properties>
         <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
-          <Format subtype="0" type="0"/>
+          <Format format="#0.00" subtype="-1" type="0"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextFieldValorDiariaActionPerformed"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
       </AuxValues>
@@ -327,7 +330,7 @@
     <Component class="javax.swing.JFormattedTextField" name="jTextFieldKilometragem">
       <Properties>
         <Property name="formatterFactory" type="javax.swing.JFormattedTextField$AbstractFormatterFactory" editor="org.netbeans.modules.form.editors.AbstractFormatterFactoryEditor">
-          <Format format="#.000" subtype="-1" type="0"/>
+          <Format format="#0.00" subtype="-1" type="0"/>
         </Property>
       </Properties>
       <AuxValues>
